@@ -1,4 +1,0 @@
-gDeskCal is a cute little eye-candy calendar for your desktop. It features
-transparency with smooth alpha-blending and its appearance can be changed
-completely by using skins. It can also read and display your Evolution
-appointments, if available.
