@@ -1,163 +1,0 @@
-@comment $NetBSD: PLIST,v 1.5 2009/06/14 18:17:58 joerg Exp $
-bin/gdeskcal
-lib/gdeskcal/AUTHORS
-lib/gdeskcal/LICENSE
-lib/gdeskcal/NEWS
-lib/gdeskcal/README
-lib/gdeskcal/README.i18n
-lib/gdeskcal/README.skins
-lib/gdeskcal/code/BGWatcher.py
-lib/gdeskcal/code/BGWatcher.pyc
-lib/gdeskcal/code/Cal.py
-lib/gdeskcal/code/Cal.pyc
-lib/gdeskcal/code/CalLabel.py
-lib/gdeskcal/code/CalLabel.pyc
-lib/gdeskcal/code/CalMediator.py
-lib/gdeskcal/code/CalMediator.pyc
-lib/gdeskcal/code/CalWindow.py
-lib/gdeskcal/code/CalWindow.pyc
-lib/gdeskcal/code/Config.py
-lib/gdeskcal/code/Config.pyc
-lib/gdeskcal/code/ConfigFormatLoader.py
-lib/gdeskcal/code/ConfigFormatLoader.pyc
-lib/gdeskcal/code/ConfigLoader.py
-lib/gdeskcal/code/ConfigLoader.pyc
-lib/gdeskcal/code/FileWatcher.py
-lib/gdeskcal/code/FileWatcher.pyc
-lib/gdeskcal/code/GlassWindow.py
-lib/gdeskcal/code/GlassWindow.pyc
-lib/gdeskcal/code/ListBox.py
-lib/gdeskcal/code/ListBox.pyc
-lib/gdeskcal/code/Menu.py
-lib/gdeskcal/code/Menu.pyc
-lib/gdeskcal/code/Navigation.py
-lib/gdeskcal/code/Navigation.pyc
-lib/gdeskcal/code/Observable.py
-lib/gdeskcal/code/Observable.pyc
-lib/gdeskcal/code/SkinBrowser.py
-lib/gdeskcal/code/SkinBrowser.pyc
-lib/gdeskcal/code/TimeWatcher.py
-lib/gdeskcal/code/TimeWatcher.pyc
-lib/gdeskcal/code/__init__.py
-lib/gdeskcal/code/__init__.pyc
-lib/gdeskcal/code/cmdlineparser.py
-lib/gdeskcal/code/cmdlineparser.pyc
-lib/gdeskcal/code/configvalues.py
-lib/gdeskcal/code/configvalues.pyc
-lib/gdeskcal/code/desktop.py
-lib/gdeskcal/code/desktop.pyc
-lib/gdeskcal/code/errormessage.py
-lib/gdeskcal/code/errormessage.pyc
-lib/gdeskcal/code/formats.py
-lib/gdeskcal/code/formats.pyc
-lib/gdeskcal/code/i18n.py
-lib/gdeskcal/code/i18n.pyc
-lib/gdeskcal/code/icon.py
-lib/gdeskcal/code/icon.pyc
-lib/gdeskcal/code/planner/CalEditor.py
-lib/gdeskcal/code/planner/CalEditor.pyc
-lib/gdeskcal/code/planner/Planner.py
-lib/gdeskcal/code/planner/Planner.pyc
-lib/gdeskcal/code/planner/Popup.py
-lib/gdeskcal/code/planner/Popup.pyc
-lib/gdeskcal/code/planner/__init__.py
-lib/gdeskcal/code/planner/__init__.pyc
-lib/gdeskcal/code/planner/cal/CalEvent.py
-lib/gdeskcal/code/planner/cal/CalEvent.pyc
-lib/gdeskcal/code/planner/cal/Calendar.py
-lib/gdeskcal/code/planner/cal/Calendar.pyc
-lib/gdeskcal/code/planner/cal/Date.py
-lib/gdeskcal/code/planner/cal/Date.pyc
-lib/gdeskcal/code/planner/cal/RRule.py
-lib/gdeskcal/code/planner/cal/RRule.pyc
-lib/gdeskcal/code/planner/cal/Recurrences.py
-lib/gdeskcal/code/planner/cal/Recurrences.pyc
-lib/gdeskcal/code/planner/cal/__init__.py
-lib/gdeskcal/code/planner/cal/__init__.pyc
-lib/gdeskcal/code/planner/categories.py
-lib/gdeskcal/code/planner/categories.pyc
-lib/gdeskcal/code/planner/iCalLoader.py
-lib/gdeskcal/code/planner/iCalLoader.pyc
-lib/gdeskcal/code/planner/iCalWriter.py
-lib/gdeskcal/code/planner/iCalWriter.pyc
-lib/gdeskcal/code/sfrmapper.py
-lib/gdeskcal/code/sfrmapper.pyc
-lib/gdeskcal/code/values.py
-lib/gdeskcal/code/values.pyc
-lib/gdeskcal/data/config.xml
-lib/gdeskcal/data/format.xml
-lib/gdeskcal/data/gfx/business.png
-lib/gdeskcal/data/gfx/favorites.png
-lib/gdeskcal/data/gfx/icon.png
-lib/gdeskcal/data/gfx/misc.png
-lib/gdeskcal/data/gfx/phone.png
-lib/gdeskcal/gdeskcal
-lib/gdeskcal/locale/ar/LC_MESSAGES/gdeskcal.mo
-lib/gdeskcal/locale/bg/LC_MESSAGES/gdeskcal.mo
-lib/gdeskcal/locale/cs/LC_MESSAGES/gdeskcal.mo
-lib/gdeskcal/locale/de/LC_MESSAGES/gdeskcal.mo
-lib/gdeskcal/locale/de_AT/LC_MESSAGES/gdeskcal.mo
-lib/gdeskcal/locale/el/LC_MESSAGES/gdeskcal.mo
-lib/gdeskcal/locale/es/LC_MESSAGES/gdeskcal.mo
-lib/gdeskcal/locale/fi/LC_MESSAGES/gdeskcal.mo
-lib/gdeskcal/locale/fr/LC_MESSAGES/gdeskcal.mo
-lib/gdeskcal/locale/he/LC_MESSAGES/gdeskcal.mo
-lib/gdeskcal/locale/hu/LC_MESSAGES/gdeskcal.mo
-lib/gdeskcal/locale/is/LC_MESSAGES/gdeskcal.mo
-lib/gdeskcal/locale/it/LC_MESSAGES/gdeskcal.mo
-lib/gdeskcal/locale/ja/LC_MESSAGES/gdeskcal.mo
-lib/gdeskcal/locale/ko/LC_MESSAGES/gdeskcal.mo
-lib/gdeskcal/locale/lt/LC_MESSAGES/gdeskcal.mo
-lib/gdeskcal/locale/nl/LC_MESSAGES/gdeskcal.mo
-lib/gdeskcal/locale/no/LC_MESSAGES/gdeskcal.mo
-lib/gdeskcal/locale/pl/LC_MESSAGES/gdeskcal.mo
-lib/gdeskcal/locale/ru/LC_MESSAGES/gdeskcal.mo
-lib/gdeskcal/locale/sk/LC_MESSAGES/gdeskcal.mo
-lib/gdeskcal/locale/sr/LC_MESSAGES/gdeskcal.mo
-lib/gdeskcal/locale/sv/LC_MESSAGES/gdeskcal.mo
-lib/gdeskcal/locale/tr/LC_MESSAGES/gdeskcal.mo
-lib/gdeskcal/locale/uk/LC_MESSAGES/gdeskcal.mo
-lib/gdeskcal/locale/zh_CN/LC_MESSAGES/gdeskcal.mo
-lib/gdeskcal/po/Makefile
-lib/gdeskcal/po/ar.po
-lib/gdeskcal/po/bg.po
-lib/gdeskcal/po/cs.po
-lib/gdeskcal/po/de.po
-lib/gdeskcal/po/de_AT.po
-lib/gdeskcal/po/el.po
-lib/gdeskcal/po/es.po
-lib/gdeskcal/po/fi.po
-lib/gdeskcal/po/fr.po
-lib/gdeskcal/po/gdeskcal.pot
-lib/gdeskcal/po/he.po
-lib/gdeskcal/po/hu.po
-lib/gdeskcal/po/is.po
-lib/gdeskcal/po/it.po
-lib/gdeskcal/po/ja.po
-lib/gdeskcal/po/ko.po
-lib/gdeskcal/po/lt.po
-lib/gdeskcal/po/nl.po
-lib/gdeskcal/po/no.po
-lib/gdeskcal/po/pl.po
-lib/gdeskcal/po/ru.po
-lib/gdeskcal/po/sk.po
-lib/gdeskcal/po/sr.po
-lib/gdeskcal/po/sv.po
-lib/gdeskcal/po/tr.po
-lib/gdeskcal/po/uk.po
-lib/gdeskcal/po/zh_CN.po
-lib/gdeskcal/skins/big_and_simple/skin.xml
-lib/gdeskcal/skins/default/bg.png
-lib/gdeskcal/skins/default/bg.xcf
-lib/gdeskcal/skins/default/home.png
-lib/gdeskcal/skins/default/next.png
-lib/gdeskcal/skins/default/prev.png
-lib/gdeskcal/skins/default/skin.xml
-lib/gdeskcal/skins/default/today.png
-lib/gdeskcal/skins/miderat/bg.png
-lib/gdeskcal/skins/miderat/bg.xcf
-lib/gdeskcal/skins/miderat/home.png
-lib/gdeskcal/skins/miderat/next.png
-lib/gdeskcal/skins/miderat/prev.png
-lib/gdeskcal/skins/miderat/skin.xml
-lib/gdeskcal/skins/miderat/today.png
