@@ -1,6 +1,0 @@
-$NetBSD: distinfo,v 1.7 2015/11/02 23:31:36 agc Exp $
-
-SHA1 (gDeskCal-0_57_1.tar.gz) = ddc51800f193aa8a6493b76c725c37a744c1eede
-RMD160 (gDeskCal-0_57_1.tar.gz) = bd2d5b193b38928a9450bb3ce4ba285e24fe3a24
-SHA512 (gDeskCal-0_57_1.tar.gz) = c483e02e311d746a2a20eaf6f5eb93468e455e46e267857c9f4cfb32e3d01404adcdb9a93cecb460148f66a6b48b209709f91da11b3a1eb936b51abb9109017c
-Size (gDeskCal-0_57_1.tar.gz) = 102826 bytes
