@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2017,v 1.3597 2017/09/04 17:12:23 adam Exp $
+$NetBSD: CHANGES-2017,v 1.3598 2017/09/04 17:46:05 wiz Exp $
 
 Changes to the packages collection and infrastructure in 2017:
 
@@ -5039,3 +5039,4 @@ Changes to the packages collection and infrastructure in 2017:
 	Updated time/py-icalendar to 3.11.7 [adam 2017-09-04]
 	Updated devel/py-pluggy to 0.5.1 [adam 2017-09-04]
 	Updated devel/py-radon to 2.0.3 [adam 2017-09-04]
+	Removed time/gdeskcal [wiz 2017-09-04]
